testfx/errors/error_tests/err_07_chinese_var.fx
// 测试7: 中文变量名错误
用户名称 := 
println(用户名称)
